--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-concat-css": "^3.1.0",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5"
   },
-  "dependencies": {}
+  "browserslist": [
+    "last 2 version",
+    "ie 11"
+  ]
 }
